--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@radix-ui/react-slot": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "contentlayer2": "^0.5.8",
     "lucide-react": "^0.562.0",
     "next": "16.1.4",
+    "next-contentlayer2": "^0.5.8",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "tailwind-merge": "^3.4.0"
