--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "clsx": "^2.1.1",
     "contentlayer2": "^0.5.8",
     "lucide-react": "^0.562.0",
-    "next": "16.1.4",
+    "next": "^16.1.6",
     "next-contentlayer2": "^0.5.8",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
