--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "contentlayer2 build && next build",
+    "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "build:content": "contentlayer2 build"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.4",
