--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "build": "contentlayer2 build && next build --webpack",
     "dev": "next dev",
-    "build": "next build",
     "start": "next start",
     "lint": "eslint",
     "build:content": "contentlayer2 build"
